# Cairn

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  sample-cairn.conf  tsconfig.json  vite.config.ts
src/: api.ts  main.ts  parser.ts  prompt.ts  render.ts  store.ts  style.css  types.ts  vim.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon512.af  tray_icon.af  tray_icon2.af
src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
